--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -73,11 +73,15 @@
 	top: 0;
 	display: flex;
 	flex-direction: column;
-	padding: 24px 24px calc(24px + env(safe-area-inset-bottom));
+	padding: 24px 0 calc(24px + env(safe-area-inset-bottom));
 	background: $ts-cream;
 	z-index: 1000;
 	transition: transform $transition-medium;
 	transform: translateX(100%);
+	@media (min-width: $breakpoint-lg) {
+		padding-left: 24px;
+		padding-right: 24px;
+	}
 }
 .header {
 	display: none;
