Update contact success message

--- a/src/containers/contact.module.scss
+++ b/src/containers/contact.module.scss
@@ -27,6 +27,13 @@
 	padding-bottom: 16px;
 }
 
-.success {
-	display: inline-block;
+.successAlert {
+	margin-top: 32px;
+	padding: 32px;
+}
+.successHeading {
+	margin-bottom: 8px;
+}
+.successCopy {
+	margin: 0;
 }
