Fix Lighthouse test failures

--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -92,6 +92,11 @@
 	margin-bottom: 0;
 }
 
+.languageButton,
+.downloadButton {
+	background: $ts-white;
+}
+
 .downloadButton svg:first-of-type {
 	color: $ts-midTone;
 }
