Fix visual bugs

--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -42,9 +42,11 @@
 	transition: opacity $transition-medium;
 }
 
-.posterPlayShown,
-.poster:hover {
-	.posterPlay {
+.posterPlayShown .posterPlay {
+	opacity: 1;
+}
+@media (hover: hover) {
+	.poster:hover .posterPlay {
 		opacity: 1;
 	}
 }
