--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -184,6 +184,7 @@
 	padding-right: 24px;
 	margin: 0 auto;
 	opacity: 0;
+	pointer-events: none;
 
 	max-width: 100vw;
 	@media (min-width: $content-maxWidth-sm) {
