--- a/src/components/organisms/section.module.scss
+++ b/src/components/organisms/section.module.scss
@@ -44,12 +44,12 @@
 .base:not(.short) .media {
 	aspect-ratio: 1/1;
 	@supports not (aspect-ratio: 1 / 1) {
-		.element::before {
+		> *::before {
 			float: left;
 			padding-top: 100%;
 			content: '';
 		}
-		.element::after {
+		> *::after {
 			display: block;
 			content: '';
 			clear: both;
