--- a/src/styles/inter.scss
+++ b/src/styles/inter.scss
@@ -1,13 +1,9 @@
 // START INTER FONT
 
-@use '~inter-ui/default' with (
-	$inter-font-display: swap,
-	$inter-font-path: '~inter-ui/Inter (web)'
-);
-@use '~inter-ui/variable' with (
-	$inter-font-display: swap,
-	$inter-font-path: '~inter-ui/Inter (web)'
-);
+@use '~inter-ui/default' with
+	($inter-font-display: swap, $inter-font-path: '~inter-ui/Inter (web)');
+@use '~inter-ui/variable' with
+	($inter-font-display: swap, $inter-font-path: '~inter-ui/Inter (web)');
 
 @include default.all;
 @include variable.all;
