--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -5,12 +5,14 @@
 	width: 100%;
 	padding-top: 55.95%;
 	background: $ts-dark;
-	> * {
+	> div, > div > button > div > div > div {
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
 
