--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -5,7 +5,8 @@
 	width: 100%;
 	padding-top: 55.95%;
 	background: $ts-dark;
-	> div, > div > button > div > div > div {
+	> div,
+	> div > button > div > div > div {
 		position: absolute;
 		top: 0;
 		left: 0;
