--- a/src/containers/bible/book.module.scss
+++ b/src/containers/bible/book.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/mixins.scss';
+
 @import '../../styles/common';
 
 .hat {
@@ -56,7 +58,28 @@
 .disclaimer {
 	font-size: 11px;
 	line-height: 13.31px;
+	margin-bottom: 16px;
+}
+
+.readAlong {
 	margin-bottom: 64px;
+}
+
+.backButton {
+	margin-bottom: 16px;
+}
+
+.chapterText {
+	font-family: $serif;
+	font-size: 15px;
+	line-height: 22.25px;
+	sup {
+		top: -4px;
+		@include mixins.sansFontFamily();
+		font-size: 11px;
+		font-weight: 700;
+		color: $ts-midTone;
+	}
 }
 
 .chapters {
