--- a/src/components/molecules/buttonGuest.module.scss
+++ b/src/components/molecules/buttonGuest.module.scss
@@ -1,5 +1,11 @@
-.link {
+.wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-size: 12px;
+}
+
+.link {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -8,7 +14,6 @@
 	background: none;
 	border: none;
 	cursor: pointer;
-	margin: 36px 0;
 	svg {
 		margin-left: 8px;
 	}
