--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -22,6 +22,14 @@
 	}
 }
 
+.primaryCtas {
+	display: flex;
+	align-items: center;
+	> * {
+		margin-right: 16px;
+	}
+}
+
 .narrow.narrow {
 	max-width: 560px;
 	margin: 0 auto 16px;
@@ -34,7 +42,7 @@
 	margin-bottom: 32px;
 }
 
-.recentSection {
+.latestSection {
 	@media (max-width: #{$breakpoint-lg - 1px}) {
 		overflow: visible;
 		> *:first-child {
@@ -42,22 +50,14 @@
 		}
 	}
 }
-
-.slideCard {
-	padding-left: 8px;
-	padding-right: 8px;
-	&:not(:last-child) {
-		margin-bottom: 16px;
-	}
-	@media (min-width: $breakpoint-md) {
-		margin-bottom: 0;
-	}
+.latestContentWrapper {
+	margin: 0 8px;
 }
 
 .blogSection {
 	margin: 16px 11px;
 	@media (min-width: $breakpoint-md) {
-		margin: 16px 16px 0;
+		margin: 16px;
 	}
 	@media (min-width: $breakpoint-xl) {
 		margin: 48px 48px 32px;
@@ -79,6 +79,11 @@
 }
 .postsSquare {
 	grid-template-columns: repeat(2, 1fr);
+}
+.postsSeeAll {
+	margin-top: 16px;
+	display: flex;
+	align-items: flex-start;
 }
 
 .featuresWrapper {
