--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -109,7 +109,7 @@
 	flex: 0 0 200px;
 	display: flex;
 	align-items: center;
-	min-width: 150px;
+	margin-right: 24px;
 	button {
 		padding: 0;
 		margin: 0;
