Constrain miniplayer volume thumb to within track

--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -129,3 +129,12 @@
 		padding: 8px;
 	}
 }
+.slider {
+	:global(.MuiSlider-rail) {
+		width: calc(100% + 16px);
+	}
+	:global(.MuiSlider-rail),
+	:global(.MuiSlider-track) {
+		left: -8px !important;
+	}
+}
