First pass at recording Audiobibles

--- a/src/components/molecules/card/base/withCardTheme.module.scss
+++ b/src/components/molecules/card/base/withCardTheme.module.scss
@@ -27,6 +27,7 @@
 	--cardBg: #{$ts-bibleB};
 	--cardColor: #{$ts-dark};
 	--cardHoverColor: #{$ts-darkened-bibleB};
+	--partColor: #{$ts-red};
 	--iconColor: #{$ts-salmon};
 	--textRuleColor: #{$ts-midTone};
 }
