--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -143,6 +143,9 @@ a {
 	&.hover-bg--darkened-bibleB {
 		background-color: $ts-darkened-bibleB;
 	}
+	&.hover-bg--darkened-bibleH {
+		background-color: $ts-darkened-bibleH;
+	}
 	&.hover-bg--darkened-bookB {
 		background-color: $ts-darkened-bookB;
 	}
