Add Bible Read Along (transcripts)

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -267,3 +267,17 @@
 		bottom: 0;
 	}
 }
+
+.transcriptWrapper {
+	margin-bottom: 16px;
+}
+
+.transcriptOpen {
+	svg {
+		transform: scaleY(-1);
+	}
+}
+
+.backToChapterButton {
+	margin-bottom: 16px;
+}
