--- a/src/components/molecules/playbackTimes.module.scss
+++ b/src/components/molecules/playbackTimes.module.scss
@@ -4,4 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 	color: var(--recordingTextSecondaryColor);
+	> span {
+		font-variant-numeric: tabular-nums;
+	}
 }
