--- a/src/components/molecules/card/bibleVersion.module.scss
+++ b/src/components/molecules/card/bibleVersion.module.scss
@@ -5,6 +5,7 @@
 	flex-direction: column;
 	padding: 16px;
 	background: $ts-bibleVersionH;
+	cursor: pointer;
 }
 
 .title {
@@ -17,4 +18,9 @@
 
 .book {
 	margin-top: 16px;
+}
+
+.showAll {
+	margin-top: 16px;
+	color: $ts-white;
 }
