Add trending teachings has video filter

--- a/src/containers/sermon/trending.module.scss
+++ b/src/containers/sermon/trending.module.scss
@@ -2,3 +2,9 @@
 	margin-top: 8px;
 	margin-bottom: 16px;
 }
+
+.filterRow {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
