feat: add videojs-airplay, videojs-chromecast

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,8 @@
 // START normalize.css
 
 @import '../../node_modules/normalize.css/normalize.css';
+@import '../../node_modules/@silvermine/videojs-airplay/dist/silvermine-videojs-airplay.css';
+@import '../../node_modules/@silvermine/videojs-chromecast/dist/silvermine-videojs-chromecast.css';
 
 // END normalize.css
 
