feat: add full screen overlay

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 // START normalize.css
 
 @import '../../node_modules/normalize.css/normalize.css';
+@import './overlay.scss';
 
 // END normalize.css
 
