--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -11,3 +11,76 @@
 	visibility: hidden !important;
 	height: 0;
 }
+
+.titleOverlayBox {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background: linear-gradient(90deg, #323e48 0%, rgba(50, 62, 72, 0) 78.78%);
+	justify-content: center;
+	align-items: flex-start;
+}
+
+.titleOverlayContent {
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 50px;
+	text-align: left;
+}
+
+.sequenceText {
+	font-size: 16px;
+	font-weight: 700;
+	color: white;
+}
+
+.partInfo {
+	color: $ts-salmon;
+	font-size: 16px;
+	font-weight: 700;
+	padding-top: 10px;
+}
+
+.titleText {
+	color: white;
+	font-size: 44px;
+	font-weight: 700;
+	padding-top: 10px;
+}
+
+.authorBox {
+	padding-top: 10px;
+}
+
+.authorAvatar {
+	display: inline-block;
+	vertical-align: middle;
+	padding: 10px;
+	border-radius: 100%;
+}
+
+.authorText {
+	color: white;
+	font-size: 16px;
+	font-weight: 400;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.series {
+	padding-top: 10px;
+	display: flex;
+	align-items: center;
+	font-weight: 700;
+	font-size: 16px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	svg {
+		color: $ts-red;
+		margin-right: 4px;
+	}
+}
