add helpscout button

--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -11,3 +11,14 @@
 	visibility: hidden !important;
 	height: 0;
 }
+
+.helpButton {
+	position: fixed;
+	bottom: 24px;
+	right: calc(24px + env(safe-area-inset-right));
+	z-index: 1;
+}
+
+:global(.andMiniplayer--withPlayer) .helpButton {
+	bottom: $miniplayer-height + 24px;
+}
