Nix sponsor fallback image on collection detail

--- a/src/components/molecules/namedAvatar.module.scss
+++ b/src/components/molecules/namedAvatar.module.scss
@@ -6,9 +6,12 @@
 }
 
 .title {
-	margin-left: 8px;
 	font-size: 16px;
 	line-height: 19.36px;
+}
+
+.titleWithImage {
+	margin-left: 8px;
 }
 
 .link {
