--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -22,3 +22,7 @@
 :global(.andMiniplayer--withPlayer) .helpButton {
 	bottom: $miniplayer-height + 24px;
 }
+
+.andMiniplayer :global(.BeaconContainer) {
+	bottom: 31px + 24px + 24px;
+}
