Fix hover style for FCBH version cards

--- a/src/components/molecules/card/bibleVersion.module.scss
+++ b/src/components/molecules/card/bibleVersion.module.scss
@@ -6,6 +6,9 @@
 	padding: 16px;
 	background: $ts-bibleVersionH;
 	cursor: pointer;
+	&:hover:not(.otherHovered) {
+		background-color: $ts-darkened-bibleH;
+	}
 }
 
 .title {
