add Icon component

--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/common';
+@import '../../styles/mixins';
 
 .header {
 	display: flex;
@@ -24,6 +25,7 @@
 			margin-right: 8px;
 			display: flex;
 			color: $ts-dark;
+			@include recolor($ts-dark, 1)
 		}
 		.label {
 			flex-grow: 1;
@@ -43,6 +45,7 @@
 		&,
 		.icon {
 			color: $ts-red;
+			@include recolor($ts-red, 1)
 		}
 	}
 	@media (min-width: $breakpoint-lg) {
@@ -51,6 +54,7 @@
 			.icon,
 			.iconDisclosure {
 				color: $ts-red;
+				@include recolor($ts-red, 1)
 			}
 		}
 	}
