--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,7 +15,7 @@ html {
 		color: $ts-cream;
 		background: $ts-dark;
 	}
-	transition-property: color, border-color, background-color;
+	transition-property: color, border-color, background-color, filter;
 	transition-duration: $transition-quick;
 	transition-timing-function: linear;
 }
