--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -24,7 +24,12 @@
 		.icon {
 			margin-right: 8px;
 			display: flex;
+			width: 24px;
+			height: 24px;
 			color: $ts-dark;
+			svg {
+				@include fadeIn($transition-quick)
+			}
 		}
 		.label {
 			flex-grow: 1;
