--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -5,3 +5,36 @@
 		font-family: 'Inter var', 'system-ui', sans-serif;
 	}
 }
+
+// ********************
+// fadeIn
+// ********************
+// https://gist.github.com/chasewoodford/2939636
+$prefix:'-moz-', '-webkit-', '-o-', '-ms-', '';
+@mixin keyframe-fadeIn {
+	0%   { opacity:0; }
+	100% { opacity:1; }
+}
+@-moz-keyframes fadeIn {
+	@include keyframe-fadeIn;
+}
+@-webkit-keyframes fadeIn {
+	@include keyframe-fadeIn;
+}
+@-o-keyframes fadeIn {
+	@include keyframe-fadeIn;
+}
+@-ms-keyframes fadeIn {
+	@include keyframe-fadeIn;
+}
+@keyframes fadeIn {
+	@include keyframe-fadeIn;
+}
+@mixin fadeIn( $arg ) {
+	$keyframe-name:fadeIn;
+	$duration:$arg;
+	@each $p in $prefix {
+		#{$p}animation:$keyframe-name $duration;
+	}
+}
+// e.g. @include fadeIn( 2s );
