--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -28,7 +28,7 @@
 			height: 24px;
 			color: $ts-dark;
 			svg {
-				@include fadeIn($transition-quick)
+				@include fadeIn($transition-quick);
 			}
 		}
 		.label {
