code review fixes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -199,9 +199,10 @@ p {
 
 $close-button-height: 30px;
 $beacon-height: $button-height + $close-button-height + $grid-gap * 3;
+$beacon-breakpoint: 451px;
 
 .BeaconContainer {
-	@media (min-width: 451px) {
+	@media (min-width: $beacon-breakpoint) {
 		right: $grid-gap !important;
 		bottom: $button-height + $grid-gap * 2 !important;
 		height: calc(100% - #{$beacon-height}) !important;
