--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 .video-js {
 	$bottom: 3.5em;
 	$nudge: 5px;
@@ -19,7 +20,7 @@
 		// IE8
 		background-color: #646464;
 		background-color: transparent;
-		border-radius: round($nudge / 2);
+		border-radius: round(math.div($nudge, 2));
 		padding: $nudge * 2;
 		width: 100%;
 		height: 100%;
