--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -15,10 +15,13 @@
 	display: none;
 	justify-content: space-between;
 	align-items: center;
-	border-top: 1px solid $ts-cream;
+	border-top: 1px solid $ts-midTone;
 	@media (min-width: $breakpoint-lg) {
 		display: flex;
 		z-index: 1001;
+	}
+	&.overlay {
+		background-color: #323e48;
 	}
 }
 
@@ -39,6 +42,9 @@
 		padding-left: 30px;
 		padding-right: 30px;
 		background-color: rgba(255, 255, 255, 0.7);
+		&.overlay {
+			background-color: transparent;
+		}
 		&.hidden {
 			opacity: 0;
 			transition: opacity $transition-quick;
@@ -62,9 +68,16 @@
 	padding-right: 16px;
 }
 
-.link:hover {
-	color: $ts-dark;
-	text-decoration: none;
+.link {
+	&:hover {
+		color: $ts-dark;
+		text-decoration: none;
+	}
+	&.overlay {
+		&:hover {
+			color: $ts-white;
+		}
+	}
 }
 
 .series {
@@ -90,6 +103,9 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	&.overlay {
+		text-align: left;
+	}
 }
 
 .progress {
@@ -98,6 +114,9 @@
 	font-size: 14px;
 	font-weight: 400;
 	color: $ts-midTone;
+	&.overlay {
+		color: $ts-darkened-lightTone;
+	}
 	> span {
 		font-variant-numeric: tabular-nums;
 	}
@@ -139,5 +158,11 @@
 	:global(.MuiSlider-rail),
 	:global(.MuiSlider-track) {
 		left: -8px !important;
+	}
+	&.overlay {
+		:global(.MuiSlider-rail),
+		:global(.MuiSlider-track) {
+			color: $ts-red;
+		}
 	}
 }
