fixed homepage tuning, fixed full screen overlay issues

--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -86,8 +86,9 @@
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	svg {
-		color: $ts-red;
+		color: $ts-salmon;
 		margin-right: 4px;
+		margin-top: 3px;
 	}
 }
 
