--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -92,6 +92,11 @@
 		color: $ts-red;
 		margin-right: 4px;
 	}
+	&.overlay {
+		svg {
+			color: $ts-salmon;
+		}
+	}
 }
 
 .title {
@@ -128,7 +133,7 @@
 }
 
 .rightButtons {
-	flex: 0 0 20px;
+	flex: 0 0 200px;
 	display: flex;
 	align-items: center;
 	margin-right: 24px;
