--- a/src/containers/presenter/list.module.scss
+++ b/src/containers/presenter/list.module.scss
@@ -52,6 +52,7 @@
 	margin-top: 8px;
 	color: $ts-midTone;
 	font-size: 16px;
+	line-height: 1.21;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
