work on cancel button styling

--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -73,6 +73,14 @@
 	cursor: pointer;
 }
 
+.base button {
+	margin: 0;
+	padding: 0;
+	background: none;
+	border: none;
+	cursor: pointer;
+}
+
 @media (min-width: $breakpoint-lg) {
 	.clearHidden.clearHidden {
 		display: none;
