--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -81,6 +81,16 @@
 	cursor: pointer;
 }
 
+.base button.cancel {
+	font-family: Inter;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 15px;
+	letter-spacing: 0em;
+	text-align: left;
+	margin-left: 28px;
+}
+
 @media (min-width: $breakpoint-lg) {
 	.hide {
 		display: none;
