--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -15,22 +15,29 @@
 }
 
 .content {
-	flex: 0 1 100vw;
-	padding: 24px calc(24px + env(safe-area-inset-right)) 24px calc(24px + env(safe-area-inset-left));
-	max-width: 100vw;
-	margin: 0 auto;
+	--maxWidth: 100vw;
 
 	@media (min-width: $content-maxWidth-sm) {
-		max-width: $content-maxWidth-sm;
+		--maxWidth: #{$content-maxWidth-sm};
 	}
 
 	@media (min-width: $breakpoint-md) {
-		max-width: 100vw;
+		--maxWidth: 100vw;
 	}
 
 	@media (min-width: $content-maxWidth) {
-		max-width: $content-maxWidth;
+		--maxWidth: #{$content-maxWidth};
 	}
+
+	--maxWidthPadding: calc((100vw - var(--maxWidth)) / 2);
+
+	flex: 0 1 100vw;
+	padding-top: 24px;
+	padding-bottom: 24px;
+	padding-right: calc(24px + env(safe-area-inset-right) + var(--maxWidthPadding));
+	padding-left: calc(24px + env(safe-area-inset-left) + var(--maxWidthPadding));
+	height: 100vh;
+	overflow: scroll;
 }
 
 .searchBox {
@@ -43,19 +50,11 @@
 
 @media (min-width: $breakpoint-lg) {
 	.content {
-		flex: 0 0 100vw;
-		padding-left: #{$sidebar-width + 24px};
 		display: flex;
 		flex-direction: column;
 	}
 
 	.searchBox.searchBox {
 		display: inherit;
-	}
-}
-
-@media (min-width: $breakpoint-xl) {
-	.content {
-		padding-left: #{$sidebar-width + 35px};
 	}
 }
