--- a/src/components/organisms/drawer.module.scss
+++ b/src/components/organisms/drawer.module.scss
@@ -35,7 +35,7 @@
 
     .navigation {
         position: static;
-        width: $sidebar-width;
+        flex: 0 0 $sidebar-width;
         padding: 0;
         overflow: scroll;
         transform: translate(0);
