--- a/src/components/molecules/jumpBar.module.scss
+++ b/src/components/molecules/jumpBar.module.scss
@@ -10,7 +10,7 @@
 
 	@media (min-width: $breakpoint-lg) {
 		position: sticky;
-		top: 28px;
+		top: 0;
 		background: $ts-white;
 		padding-bottom: 8px;
 		z-index: 1;
@@ -18,6 +18,7 @@
 		padding-left: 8px;
 		margin-right: -8px;
 		padding-right: 8px;
+
 		&::before {
 			content: '';
 			position: absolute;
@@ -28,10 +29,12 @@
 			height: 32px;
 		}
 	}
-	> a {
+
+	>a {
 		width: 26px;
 		margin-right: 8px;
 		line-height: 32px;
+
 		&:hover {
 			text-decoration: none;
 		}
