--- a/src/components/organisms/mobileHeader.module.scss
+++ b/src/components/organisms/mobileHeader.module.scss
@@ -8,13 +8,16 @@
     z-index: 10;
     background: $ts-cream;
     padding-bottom: 8px;
+    padding-left: calc(24px + env(safe-area-inset-left));
+    padding-right: calc(24px + env(safe-area-inset-right));
 }
 
 .title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 24px calc(24px + env(safe-area-inset-right)) 14px calc(24px + env(safe-area-inset-left));
+    padding-top: 24px;
+    padding-bottom: 14px;
     z-index: 1;
     background: $ts-cream;
 
@@ -29,12 +32,12 @@
 
 .subnav {
     display: flex;
+    align-items: end;
+    justify-content: space-between;
     align-items: center;
     position: relative;
     background: $ts-cream;
-    margin: 0 calc(24px + env(safe-area-inset-right)) 0 calc(24px + env(safe-area-inset-left));
     overflow: hidden;
-    align-items: end;
 }
 
 .subnavItems {
@@ -45,8 +48,6 @@
 }
 
 .more {
-    position: absolute;
-    right: 0;
     height: 24px;
 }
 
