--- a/src/components/organisms/mobileHeader.module.scss
+++ b/src/components/organisms/mobileHeader.module.scss
@@ -1,16 +1,16 @@
 @import '../../styles/common';
 
+@mixin hpad() {
+    padding-left: calc(24px + env(safe-area-inset-left));
+    padding-right: calc(24px + env(safe-area-inset-right));
+}
+
 .base {
     position: sticky;
     top: 0;
     display: flex;
     flex-direction: column;
     z-index: 10;
-
-    >* {
-        padding-left: calc(24px + env(safe-area-inset-left));
-        padding-right: calc(24px + env(safe-area-inset-right));
-    }
 }
 
 .title {
@@ -19,6 +19,8 @@
     justify-content: space-between;
     z-index: 1;
     background: $ts-cream;
+
+    @include hpad();
 
     > :first-child {
         margin-right: 16px;
@@ -33,6 +35,8 @@
     position: relative;
     overflow: hidden;
     background: $ts-cream;
+
+    @include hpad();
 }
 
 .subnavItems {
@@ -50,7 +54,10 @@
 
 .search {
     padding-top: 24px;
-    padding-bottom: 24px;
+
+    > :first-child {
+        @include hpad();
+    }
 }
 
 .searchActive {
