work on mobile header styling

--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -99,7 +99,8 @@
 	flex: 0 0 100%;
 	overflow-x: scroll;
 	padding-bottom: 8px;
-	margin-bottom: 24px;
+	padding-top: 16px;
+	margin-bottom: 0;
 }
 
 .inactive {
