--- a/src/components/organisms/mobileHeader.module.scss
+++ b/src/components/organisms/mobileHeader.module.scss
@@ -55,15 +55,46 @@
 }
 
 .search {
+    background: $ts-white;
     padding-top: 14px;
 
-    >* {
+    .searchInput {
         @include hpad();
     }
 }
 
+.searchFilters {
+    padding-top: 8px;
+}
+
 .searchActive {
     background: $ts-cream;
+    padding-top: 8px;
+
+    @include hpad();
+
+    .searchInput {
+        background: $ts-white;
+        border-bottom: none;
+        border-radius: 4px;
+        padding: 4px 12px 4px 8px;
+        height: 32px;
+
+        >svg {
+            color: $ts-red;
+        }
+
+        input,
+        input::placeholder {
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+        }
+    }
+
+    >button {
+        margin-left: 8px;
+    }
 }
 
 @media (min-width: $breakpoint-lg) {
